GroupBy tests are OK